@@ -42,22 +42,16 @@ Sony Pictures Imageworks terms, above.
 #include <cstring>
 
 #include <OpenImageIO/strutil.h>
+#include <OpenImageIO/argparse.h>
 
 #include "OSL/oslquery.h"
 using namespace OSL;
 
 
-
-static void
-usage (void)
-{
-    std::cout << "oslinfo " OSL_LIBRARY_VERSION_STRING " -- list parameters of a compiled OSL shader\n";
-    std::cout << OSL_COPYRIGHT_STRING "\n";
-    std::cout << "Usage:  oslinfo [options] file0 [file1 ...]\n";
-    std::cout << "Options:\n";
-    std::cout << "       -v       Verbose\n";
-    std::cout << "       -p %s    Set searchpath for shaders\n";
-}
+static std::string searchpath;
+static bool verbose = false;
+static bool help = false;
+static std::string oneparam;
 
 
 
@@ -135,27 +129,29 @@ print_metadata (const OSLQuery::Parameter &m)
 
 
 static void
-oslinfo (const std::string &name, const std::string &path, bool verbose)
+oslinfo (const std::string &name)
 {
     OSLQuery g;
-    g.open (name, path);
+    g.open (name, searchpath);
     std::string e = g.geterror();
     if (! e.empty()) {
         std::cout << "ERROR opening shader \"" << name << "\" (" << e << ")\n";
         return;
     }
-    if (verbose)
-         std::cout << g.shadertype() << " \"" << g.shadername() << "\"\n";
-    else std::cout << g.shadertype() << " " << g.shadername() << "\n";
-    if (verbose) {
-        for (unsigned int m = 0;  m < g.metadata().size();  ++m)
-            print_metadata (g.metadata()[m]);
+    if (oneparam.empty()) {
+        std::cout << g.shadertype() << " \"" << g.shadername() << "\"\n";
+        if (verbose) {
+            for (unsigned int m = 0;  m < g.metadata().size();  ++m)
+                print_metadata (g.metadata()[m]);
+        }
     }
 
     for (size_t i = 0;  i < g.nparams();  ++i) {
         const OSLQuery::Parameter *p = g.getparam (i);
         if (!p)
             break;
+        if (oneparam.size() && oneparam != p->name)
+            continue;
         std::string typestring;
         if (p->isstruct)
             typestring = "struct " + p->structname.string();
@@ -204,27 +200,37 @@ oslinfo (const std::string &name, const std::string &path, bool verbose)
 
 
 
+static int
+input_file (int argc, const char *argv[])
+{
+    for (int i = 0;  i < argc;  i++) {
+        oslinfo (argv[i]);
+    }
+    return 0;
+}
+
+
+
 int
 main (int argc, char *argv[])
 {
-    std::string path;
-    bool verbose = false;
-    for (int a = 1;  a < argc;  ++a) {
-        if (! strcmp(argv[a],"-") || ! strcmp(argv[a],"-h") ||
-            ! strcmp(argv[a],"-help") || ! strcmp(argv[a],"--h") ||
-            ! strcmp(argv[a],"--help")) {
-            usage();
-            return 0;
-        } else if (! strcmp(argv[a], "-p")) {
-            if (a == argc-1) {
-                usage(); return(-1);
-            }
-            path = argv[++a];
-        } else if (! strcmp (argv[a], "-v")) {
-            verbose = true;
-        } else {
-            oslinfo (argv[a], path, verbose);
-        }
+    OIIO::ArgParse ap (argc, (const char **)argv);
+    ap.options ("oslinfo -- list parameters of a compiled OSL shader\n"
+                OSL_INTRO_STRING "\n"
+                "Usage:  oslinfo [options] file0 [file1 ...]\n",
+                "%*", input_file, "",
+                "-h", &help, "Print help message",
+                "--help", &help, "",
+                "-v", &verbose, "Verbose",
+                "-p %s", &searchpath, "Set searchpath for shaders",
+                "--param %s", &oneparam, "Output information in just this parameter",
+                NULL);
+
+    if (ap.parse (argc, (const char **)argv) < 0) {
+        std::cerr << ap.geterror() << std::endl;
+        ap.usage ();
+    } else if (help || argc <= 1) {
+        ap.usage ();
     }
-    return 0;
+    return EXIT_SUCCESS;
 }
